--- a/src/layouts/pages.hbs
+++ b/src/layouts/pages.hbs
@@ -3,8 +3,53 @@
   <head>
     <meta charset="utf-8">
     <title>Alberto de la Cruz</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+    @import url(http://fonts.googleapis.com/css?family=Quattrocento:400,700);
+    html {
+      font-family: 'Quattrocento', Georgia, serif;
+    }
+    body {
+      margin: 0 auto;
+      max-width: 700px;
+      padding: 1% 8% 3% 8%;
+    }
+
+    .title-block {
+      display: inline-block;
+    }
+
+    .nav {
+      display: inline-block;
+      margin: 0;
+      padding: 0 10px 0 0;
+    }
+
+    img {
+      width: 100%;
+    }
+
+    .column {
+      display: inline-block;
+      max-width: 350px;
+      vertical-align: top;
+    }
+    </style>
   </head>
   <body>
     {{> body}}
+    <hr>
+    <p>Designed and Coded by Alberto Guillermo <span class="title-block">de la Cruz</span></p>
+
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-65309658-1', 'auto');
+      ga('send', 'pageview');
+
+    </script>
   </body>
 </html>
