--- a/src/projects/arroz-blanco.hbs
+++ b/src/projects/arroz-blanco.hbs
@@ -1,3 +1,6 @@
+<h1><a href="http://albertogui.com">Alberto Guillermo de la Cruz</a></h1>
+<h2>Arroz Blanco (T-Shirt and Sticker Design, Branding)</h2>
+<div class="img-container">
 <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/arroz-logo.jpg">
 <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/arigatas.png">
 <img src="
@@ -18,7 +21,10 @@ https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/pistola-sticke
 <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/arroz-bizcard2.png">
 <img src="
 https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/arroz-postcard.png">
+</div>
 
-<p>Last year, out of curiosity I decided to check out the book Launch a Kickass T-Shirt Brand. I decided to give it a shot and that summer I set up a booth in Puerto Rico Comic Con selling t-shirts and stickers I designed. I also had a basic website and social media campaign promoting the products. My expectations with the brand weren’t in line with the reality. I wanted to be completely sold out of my product by the end of Comic Con, instead I was able to sell a quarter of my merchandise. I learned from the experience that I didn’t want to get into the t-shirt business, however it was because of this project I first started becoming interested in web design, collaborating with a programmer friend of mine in making the website. In designing the website I started reading up on responsive web design and usability and in the process became interested in user experience.</p>
+<p>Last year, out of curiosity I decided to check out the book <a href="http://www.amazon.com/Launch-Kick-Ass-T-Shirt-Brand-ebook/dp/B005D9J252">Launch a Kickass T-Shirt Brand</a>. Inspired by other hispanic T-shirt brands like <a href="http://shop.tripleta.com/">Tripleta</a> and <a href="http://mangobajito.com/">MangoBajito</a>, I decided to give it a shot and that summer I set up a booth in <a href="http://www.prcomiccon.com/">Puerto Rico Comic Con</a> selling t-shirts and stickers I designed.</p>
+
+<p>The designs were inspired by a mix of Puerto Rican and Japanese culture, hence the name Arroz Blanco (since both Japanese and Puerto Rican cuisine have a heavy emphasis on white rice). I also set up a basic website and social media campaign promoting the products. My expectations with the brand weren’t in line with the reality. I wanted to be completely sold out of my product by the end of Comic Con, instead I was able to sell a quarter of my merchandise. I learned from the experience that I didn’t want to get into the t-shirt business, however it was because of this project I first started becoming interested in web design, collaborating with a programmer friend of mine in making the website. In designing the website I started reading up on responsive web design and usability and in the process became interested in user experience.</p>
 
 <p>And yes, I’m still sitting on about a hundred t-shirts.</p>
