--- a/src/index.hbs
+++ b/src/index.hbs
@@ -7,9 +7,9 @@
 
 <p>I am a designer and developer from Puerto Rico now studying and working in NYC. Since I am versed in both the creative and technical sides of developing an application, I want to be closely involved with the user experience and implementation of client side interfaces. I am also interested in data visualization and interactive art.</p>
 
-<p>I am currently working on my BFA in Design from the School of Visual Arts and have recently completed a Front End Development Apprenticeship with Bloc.</p>
+<p>I am currently working on my BFA in Design from the <a href="http://sva.edu">School of Visual Arts</a> and have recently completed a Front End Development Apprenticeship with <a href="http://bloc.io">Bloc</a>.</p>
 
-<p>Outside of work I am an animation, comics and film buff. I used to study Illustration, but I also strongly considered going to school for Art History. I enjoy drinking craft beer and sake with friends and trying new types of cuisine. I love single player video games, although I haven’t been able to sit down and play in quite a long time.</p>
+<p>Outside of work I am an animation, comics and film buff. I used to study Illustration, but I also strongly considered going to school for Art History. I enjoy drinking craft beer and sake with friends and trying new types of cuisine. I love single player video games, although I haven’t been able to sit down and play in quite a long time. You can probably find me spinning in <a href="http://flywheelsports.com">Flywheel's</a> Flatiron location.</p>
 
 <p>I can also be found on <a href="https://twitter.com/_albertogui">Twitter</a>, <a href="https://github.com/AGdelaX">GitHub</a>, <a href="http://sblood.tumblr.com/">Tumblr</a> and <a href="https://www.linkedin.com/pub/alberto-de-la-cruz/77/64/280">LinkedIn</a>.</p>
 
@@ -36,7 +36,7 @@
 <p>A quick little project, I used Vanilla JS to write a script that lets users add Google Fonts to two sets of arrays of objects, one for header fonts and the other for body fonts. The script will ‘randomize’ the fonts displayed on the page.</p>
 
 <h3><a href="#">CRITlink</a> (Front End Development, UI/UX Design)</h3>
-<p>A light version of InVision’s critiquing system, my goal was to allow users to upload images and be able to send that link to friends to get position based comments on the image. I also played around with jQuery UI to make all the elements on the page draggable.</p>
+<p>A light version of InVision’s critiquing system, my goal was to allow users to upload images and be able to send that link to friends to get position based comments on the image. I also played around with jQuery UI to make all the elements on the page draggable. This app was built with ReactJS with Firebase in the back-end.</p>
 
 <!-- <hr>
 
