--- a/src/layouts/pages.hbs
+++ b/src/layouts/pages.hbs
@@ -26,7 +26,13 @@
     }
 
     img {
-      width: 100%;
+      max-width: 100%;
+      margin: 10px 0 10px 0;
+      display: inline-block;
+    }
+
+    .image-container {
+      text-align: center;
     }
 
     .column {
@@ -49,7 +55,6 @@
 
       ga('create', 'UA-65309658-1', 'auto');
       ga('send', 'pageview');
-
     </script>
   </body>
 </html>
