--- a/src/projects/alice-crm.hbs
+++ b/src/projects/alice-crm.hbs
@@ -1,3 +1,6 @@
+<h1><a href="http://albertogui.com">Alberto Guillermo de la Cruz</a></h1>
+<h2>Alice CRM System (UI/UX Design)</h2>
+<div class="image-container">
 <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/alice-crm/vendor-crm-main.png" style="border: 1px solid #d3d3d3">
 <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/alice-crm/vendor-crm-categories.png" style="border: 1px solid #d3d3d3">
 <img src="
@@ -7,6 +10,7 @@ https://s3-us-west-2.amazonaws.com/wip-bucket/github/alice-crm/vendor-crm-entry.
 https://s3-us-west-2.amazonaws.com/wip-bucket/github/alice-crm/vendor-crm-print.png">
 <img src="
 https://s3-us-west-2.amazonaws.com/wip-bucket/github/alice-crm/vendor-crm-pdf.png" style="border: 1px solid #d3d3d3">
+</div>
 
 
 <p>My favorite project at Alice was the design of a CRM system to be used by hotel concierge. We wanted to develop a system where concierge can quickly make recommendations to hotel guests by searching through their notes and database on nearby vendors and being able to easily export the vendor data as a PDF.</p>
