--- a/src/index.hbs
+++ b/src/index.hbs
@@ -1,5 +1,5 @@
 <h1>Alberto Guillermo <span class="title-block">de la Cruz</span></h1>
-<h2>UI/UX Designer and <span class="title-block">Front End Developer</span></h2>
+<h2>UI/UX Designer &amp; <span class="title-block">Front End Developer</span></h2>
 
 <!-- <h3 class="nav"><a href="#">Projects</a></h3> -->
 <!-- <h3 class="nav"><a href="#">Writings</a></h3> -->
